--- a/assignment-2.html
+++ b/assignment-2.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="min-section">
+        <div class="nav-section">
+            <div class="nav-titel">
+           <h2>
+            G3 Architects
+           </h2>
+            </div>
+            <div>
+                <ul class="nev-ul"> 
+                    <li>Hoom</li>
+                    <li>About</li>
+                    <li>Contact Us</li>
+                    <li>Login</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
-</html>
+</html> 
