--- a/assignment-2.html
+++ b/assignment-2.html
@@ -24,6 +24,18 @@
                 </ul>
             </div>
         </div>
+        <div class="min-heading">
+            <div class="head-line">
+                <h1>Brand New <br> Group of Architects</h1>
+            </div>
+            <div class="nifo-1">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+            <button class="explore-button">Explore More</button>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
     </section>
 </body>
 </html> 
