--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <section class="min-section">
@@ -33,7 +33,7 @@
             </div>
             <button class="explore-button">Explore More</button>
        <div class="ac">
-            <img src="./g3-architects/images/banner (1).png" alt="">
+            <img src="./images/banner (1).png" alt="">
         </div>
 
 </div>
@@ -41,10 +41,10 @@
     <section class="section-2">
       <div class="heading-img">
         <div class="teams">
-            <div class="team"><img src="/g3-architects/images/team2.png" alt=""></div>
-            <div class="team"><img src="./g3-architects/images/team4.png" alt=""></div>
-            <div class="team"><img src="./g3-architects/images/team1.png" alt=""></div>
-            <div class="team"><img src="./g3-architects/images/team3.png" alt=""></div>
+            <div class="team"><img src="./images/team2.png" alt=""></div>
+            <div class="team"><img src="./images/team4.png" alt=""></div>
+            <div class="team"><img src="./images/team1.png" alt=""></div>
+            <div class="team"><img src="./images/team3.png" alt=""></div>
           </div>
           <div class="quick-list">
             <h1><samp class="quick-list">Quick list</samp> of Our <samp class="features">>>>>Features>>>></samp></h1>
@@ -94,7 +94,7 @@
             <div class="architect-img">
                               <button class="but-2">10+Year
                                 <p class="but-prra">Experience</p>
-                              </button>  <img src="./g3-architects/images/architect.png" alt="">
+                              </button>  <img src="./images/architect.png" alt="">
 
                </div>
            </div>
@@ -108,23 +108,23 @@
             </div>
            <div  class="logo">
             <div class="ridon">
-                <img src="./g3-architects/images/icons/ribon.png" alt="">
+                <img src="./images/icons/ribon.png" alt="">
                 <h1>101</h1>
                 <p>Awards Winnings</p>
                </div>
                <div class="projects">
-                <img src="./g3-architects/images/icons/projects.png" alt="">
+                <img src="./images/icons/projects.png" alt="">
                 <h1>1538</h1>
                 <p>Project Finished</p>
                </div>
                <div class="coustomers">
                 <img 
-                 src="./g3-architects/images/icons/customers.png" alt="">
+                 src="./images/icons/customers.png" alt="">
                 <h1>569</h1>
                 <p>Clients Worked</p>
                </div>
                <div class="email">
-                <img src="./g3-architects/images/icons/email.png" alt="">
+                <img src="./images/icons/email.png" alt="">
                 <h1>30579</h1>
                 <p>Email Send</p>
                </div>
@@ -137,11 +137,11 @@
                 <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
             </div>
             <div class="brand">
-        <div> <img src="./g3-architects/images/sponsors/amazon.png" alt=""> </div>
-        <div> <img src="./g3-architects/images/sponsors/figma.png" alt=""> </div>
-        <div> <img src="./g3-architects/images/sponsors/google.png" alt=""> </div>
-        <div> <img src="./g3-architects/images/sponsors/spotify.png" alt=""> </div>
-        <div> <img src="./g3-architects/images/sponsors/telerama.png" alt=""> </div>
+        <div> <img src="./images/sponsors/amazon.png" alt=""> </div>
+        <div> <img src="./images/sponsors/figma.png" alt=""> </div>
+        <div> <img src="./images/sponsors/google.png" alt=""> </div>
+        <div> <img src="./images/sponsors/spotify.png" alt=""> </div>
+        <div> <img src="./images/sponsors/telerama.png" alt=""> </div>
       </div>
           </div>
         
