--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </nav>
 </form>
 <footer class="footer">
-    All rights reserved copyright@2023 startup landing page design
+    <p last-pera>All rights reserved copyright@2023 startup landing page design</p>
 </footer>
 </body>
 </html> 
